UIMA-1065 apply findbugs fixups patch with a few additional fixes, and user guide doc fixes with an additional fix to ordered list formatting for 2 digit numbers.
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/sandbox/trunk@823566 13f79535-47bb-0310-9956-ffa450edef68